# airline_customer_satisfaction

./: README.md  app.py  config.py  pyproject.toml  setup.py  setup_structure.py
data/raw/: flight_df (2) copy.csv
data/transformed/: _new_flight_df.csv
models/: dec_tree.joblib  lgbm_model.joblib
notebooks/: app-ml.ipynb  eda.ipynb  feature_importance.py  ml.ipynb  preprocesing.ipynb  test_function.ipynb
src/: categorical_encoder.py  data_preprocessing.py  evaluate_model.py  example_module.py  feature_importance.py  load_data.py  preprocessing_pipeline.py  train_predict.py
